all form and card updated

--- a/server/.env
+++ b/server/.env
@@ -6,5 +6,5 @@ ADMIN_PASSWORD=admin123
 CORS_ORIGIN=http://localhost:5173
 GOOGLE_OAUTH_CLIENT_ID=YOUR_WEB_CLIENT_ID.apps.googleusercontent.com
 # list admins who are allowed to sign in (comma-separated)
-ADMIN_ALLOWLIST=admin@example.com, second.admin@gmail.com
+ADMIN_ALLOWLIST=admin@example.com, yewbdar.grima@gmail.com
 
